add Hanahan and Weinberg reference

--- a/text/references.bib
+++ b/text/references.bib
@@ -1,3 +1,13 @@
+@article{weinberg2000,
+  title = {The Hallmarks of Cancer},
+  author = {Hanahan, D. and Weinberg, R.A.},
+  journal = {Cell},
+  year = {2000},
+  volume = {10},
+  issue = {1},
+  pages = {57--70},
+  doi = {10.1016/S0092-8674(00)81683-9}
+}
 
 @article{deesMuSiC2012,
   title = {{{MuSiC}}: Identifying Mutational Significance in Cancer Genomes},
