--- a/text/manuscript.Rmd
+++ b/text/manuscript.Rmd
@@ -110,8 +110,11 @@ transform a normal cell to a cancerous state [@vogelsteinPathCancerThree2015].
 
 Other studies aim at providing a comprehensive view of mutations, gene
 expression and genomic signatures, with the express goal of understanding the
-common themes of all cancer independent of tissue of origin. The first of these
-(the “Pan-Cancer-12” analysis) identified 11 subtypes from 12 cancer types,
+common themes of all cancer independent of tissue of origin. Such a view of
+cancer as a malady affecting common cellular processes has long been a goal of
+the field and is perhaps best characterized in an essay by @weinberg2000 (see also
+Discussion). The first of these studies, (the
+“Pan-Cancer-12” analysis) identified 11 subtypes from 12 cancer types,
 using integrative analysis with co-equal weighting of gene expression,
 methylation, copy number and proteomics data
 [@hoadleyMultiplatformAnalysis2014]. The principal finding was that
@@ -120,7 +123,7 @@ proportion of tumors ($10\%$) could be reclassified independent of
 tissue-of-origin. In a second study involving 33 cancer types and a much greater
 number of tumors using a newer algorithm (iCluster)
 [@shenIntegrativeClusteringMultiple2009], the authors identify 28 clusters that
-could be further related or subdivided into organ specific groups, including
+could be further subdivided into organ specific groups, including
 pan-gastrointestinal, pan-gynecological, pan-squamous, pan-gynecological/
 squamous and pan-kidney [@hoadleyCellofOriginPatternsDominate2018].
 
