--- a/text/references.bib
+++ b/text/references.bib
@@ -9,6 +9,18 @@
   doi = {10.1016/S0092-8674(00)81683-9}
 }
 
+@article{hallmarks_II,
+  title = {Hallmarks of Cancer: The Next Generation},
+  author = {Hanahan, D. and Weinberg, R.A.},
+  journal = {Cell},
+  year = {2011},
+  volume = {144},
+  issue = {5},
+  pages = {646--674},
+  pmid = {21376230},
+  doi = {10.1016/j.cell.2011.02.013},
+}
+
 @article{deesMuSiC2012,
   title = {{{MuSiC}}: Identifying Mutational Significance in Cancer Genomes},
   shorttitle = {{{MuSiC}}},
